--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.4.2",
     "expo": "~54.0.30",
+    "expo-font": "^14.0.10",
+    "expo-splash-screen": "^31.0.13",
     "expo-status-bar": "~3.0.9",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
+    "react-hook-form": "^7.68.0",
     "react-native": "0.81.5",
     "react-native-reanimated": "~4.1.1",
-    "react-native-safe-area-context": "~5.6.0"
+    "react-native-safe-area-context": "~5.6.0",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
