--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/native-stack": "^7.9.0",
     "expo": "~54.0.30",
+    "expo-constants": "^18.0.12",
     "expo-font": "^14.0.10",
     "expo-image-picker": "~17.0.10",
     "expo-location": "~19.0.8",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@types/react": "~19.1.0",
     "babel-preset-expo": "^54.0.9",
+    "dotenv": "^17.2.3",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.19",
     "typescript": "~5.9.2"
